# Churn_Prediction

./: .env.example  .gitignore  ML_engineering_workflow.ipynb  README.md  create_glue_job.py  customer-churn-EDA.ipynb  glue_script.py  pyproject.toml  upload_glue_script.py
docs/: INDEX.md  SECURITY.md  SETUP_GUIDE.md
