[project]
name = "churn-prediction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.41.5",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
